RESOLVED FIXED156036
Fix Content-Range requests when not using the NetworkCache with NetworkSession
https://bugs.webkit.org/show_bug.cgi?id=156036
Summary Fix Content-Range requests when not using the NetworkCache with NetworkSession
Alex Christensen
Reported 2016-03-30 13:01:13 PDT
Fix Content-Range requests when not using the NetworkCache with NetworkSession
Attachments
Patch (1.88 KB, patch)
2016-03-30 13:14 PDT, Alex Christensen
no flags
Patch (2.97 KB, patch)
2016-04-04 11:39 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-03-30 13:14:05 PDT
Sam Weinig
Comment 2 2016-03-30 23:03:09 PDT
Comment on attachment 275215 [details] Patch Test case?
Alex Christensen
Comment 3 2016-03-31 10:42:10 PDT
I looked into writing an automated test case, but this is only needed when the NetworkCache is disabled, which is not true for WebKitTestRunner, and when loading from the network, which is not true for TestWebKitAPI. Doing the manual test in the radar certainly shows that this fixes a problem with videos on WK2 apps with the NetworkCache disabled.
Darin Adler
Comment 4 2016-04-03 12:35:22 PDT
Comment on attachment 275215 [details] Patch Could you please add a regression test?
Alex Christensen
Comment 5 2016-04-04 11:39:32 PDT
Alex Christensen
Comment 6 2016-04-04 11:53:16 PDT
(In reply to comment #4) > Comment on attachment 275215 [details] > Patch > > Could you please add a regression test? I don't think it is reasonable to do this because this is to fix a compatibility bug with a program that does not use the NetworkCache, which is not possible with a program that is linked with a recent version of WebKit.
WebKit Commit Bot
Comment 7 2016-04-05 18:37:10 PDT
Comment on attachment 275562 [details] Patch Clearing flags on attachment: 275562 Committed r199090: <http://trac.webkit.org/changeset/199090>
WebKit Commit Bot
Comment 8 2016-04-05 18:37:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.