Fix Range requests when not using the NetworkCache with NetworkSession https://bugs.webkit.org/show_bug.cgi?id=156036 rdar://problem/25334939

Patch by Alex Christensen <achristensen@webkit.org> on 2016-04-05
Reviewed by Sam Weinig.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:dataTask:willCacheResponse:completionHandler:]):
Don't cache any responses with Content-Range headers to work around rdar://problem/20001985.
This is similar to the workaround in shouldCacheResponse in WebCoreNSURLSession.mm
(WebKit::NetworkSession::NetworkSession):
If we are using the NetworkCache, then don't use CFNetwork's cache.

Canonical link: https://commits.webkit.org/174363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199090 268f45cc-cd09-0410-ab3c-d52691b4dbfc